# genesis

./: .gitignore  Cargo.toml  Dockerfile.dev  PROMPT.md  README.md  TASKS.md  clippy.toml  docker-compose.yml  flake.nix  justfile  rustfmt.toml  start.sh
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: benchmark.yml  ci.yml  docs.yml  release.yml
agent-prompts/: gameplay-prompt.md  tools-prompt.md
agent-prompts/iteration8/: gameplay-prompt.md  infra-prompt.md  tools-prompt.md
agent-prompts/iteration9/: infra-prompt.md  kernel-prompt.md
assets/characters/player/: player.toml
assets/locales/: en.json  es.json
assets/recipes/: advanced.toml  basic.toml
assets/sounds/: SOUND_ASSETS.md
assets/sounds/ambient/: cave.mp3.stub  desert_day.mp3.stub  desert_night.mp3.stub  forest_day.mp3.stub  forest_night.mp3.stub  lake.mp3.stub  mountain.mp3.stub  rain.mp3.stub  storm.mp3.stub  swamp.mp3.stub
assets/sounds/music/: boss.mp3.stub  combat.mp3.stub  desert.mp3.stub  exploration.mp3.stub  forest.mp3.stub  menu_theme.mp3.stub  night.mp3.stub  village.mp3.stub
assets/sounds/sfx/: README.md
assets/sprites/characters/: character_0.toml  player.toml
assets/weapons/: melee.toml  ranged.toml
crates/cubiomes-sys/: Cargo.toml  build.rs  cubiomes_helper.c
crates/cubiomes-sys/src/: lib.rs
crates/genesis-common/: Cargo.toml
crates/genesis-common/src/: coords.rs  error.rs  ids.rs  lib.rs  version.rs
crates/genesis-engine/: Cargo.toml
crates/genesis-engine/src/: analytics.rs  app.rs  asset_manager.rs  audio_assets.rs  audio_integration.rs  audio_state.rs  automation.rs  autosave.rs  cloud_storage.rs  combat_events.rs  combat_profile.rs  combat_save.rs  config.rs  crafting_events.rs  crafting_profile.rs  crafting_save.rs  crash_report.rs  e2e_tests.rs  environment.rs  exit_handler.rs  input.rs  input_rebind.rs  lib.rs  main.rs  menu_state.rs  perf.rs  recipe_loader.rs  renderer.rs  save_manager.rs  save_version.rs  settings_persistence.rs  timing.rs  weapon_loader.rs  world.rs
crates/genesis-gameplay/: Cargo.toml
crates/genesis-gameplay/src/: ai.rs  ambient.rs  biome.rs  collision_response.rs  combat.rs  combat_stats.rs  crafting.rs  crafting_progression.rs  crafting_ui.rs  damage_calc.rs  dialogue.rs  economy.rs  entity.rs  events.rs  faction.rs  game_state.rs  input.rs  interaction.rs  inventory.rs  inventory_ui.rs  lib.rs  melee_combat.rs  music.rs  needs.rs  npc.rs  npc_save.rs  npc_spawning.rs  pause.rs  physics.rs  plants.rs  player.rs  player_save.rs  progress_save.rs  quest.rs  ranged_combat.rs  recipes.rs  save.rs  session.rs  settings.rs  sound_events.rs  (+9 more)
crates/genesis-kernel/: Cargo.toml
crates/genesis-kernel/src/: audio.rs  audio_backend.rs  audio_legacy.rs  audio_resource.rs  audio_spatial.rs  autotile_atlas.rs  autotile_render.rs  benchmark.rs  biome.rs  buffer.rs  camera.rs  cell.rs  chunk.rs  chunk_manager.rs  chunk_serialize.rs  collision.rs  combat_collision.rs  combat_particles.rs  compute.rs  crafting_anim.rs  crafting_grid.rs  damage_render.rs  edge.rs  event.rs  incremental_save.rs  intent.rs  item_stack.rs  lib.rs  lighting.rs  menu_backdrop.rs  npc_collision.rs  npc_render.rs  particles.rs  player_sprite.rs  projectile.rs  quadtree.rs  readback.rs  render.rs  resolution.rs  save_compression.rs  (+17 more)
crates/genesis-tools/: Cargo.toml
crates/genesis-tools/src/: assets.rs  audio.rs  cell_inspector.rs  chunk_viewer.rs  combat_hud.rs  console.rs  crafting_ui.rs  debug_overlay.rs  dialogue_ui.rs  egui_integration.rs  event_log.rs  game_hud.rs  hot_reload.rs  hotbar.rs  inspector.rs  inventory_ui.rs  lib.rs  localization.rs  memory_profiler.rs  minimap.rs  npc_debug.rs  perf.rs  perf_hud.rs  quest_ui.rs  replay.rs  screenshot.rs  test_harness.rs
crates/genesis-tools/src/ui/: audio_debug.rs  audio_settings.rs  autosave_indicator.rs  biome.rs  character_generator.rs  combat_debug.rs  combat_hud.rs  crafting_grid.rs  crafting_preview.rs  environment.rs  equipment_stats.rs  factions.rs  health_bars.rs  inventory.rs  main_menu.rs  minimap.rs  mod.rs  new_game_wizard.rs  options_menu.rs  pause_menu.rs  recipe_book.rs  save_management.rs  save_menu.rs  save_preview.rs  sound_test.rs  sprite_builder.rs  stats.rs  workbench_ui.rs  world_gen_panel.rs  world_tools.rs
crates/genesis-world/: Cargo.toml
crates/genesis-world/src/: chunk.rs  generation.rs  lib.rs  streaming.rs
crates/genesis-worldgen/: Cargo.toml
crates/genesis-worldgen/src/: biome_height.rs  biome_map.rs  generator.rs  lib.rs
docs/: ARCHITECTURE.md  MOD_FORMAT.md  WORKTREE_SETUP.md  book.toml
docs/agents/: README.md  gameplay_agent.md  infra_agent.md  kernel_agent.md  tools_agent.md
docs/src/: SUMMARY.md  introduction.md
docs/src/api/: index.md
docs/src/architecture/: overview.md
docs/src/getting-started/: first-steps.md  installation.md  quick-start.md
docs/src/modding/: introduction.md
iteration10/: infra-agent.md  kernel-agent.md
macros/: biome_exploration.json  full_resolution_test.json  player_sprite_test.json  seed_comparison.json  test_scout_sprite.json
scripts/: analyze-colors.ts  analyze-image.ts  analyze-spritesheet-cv.ts  analyze-spritesheet.ts  analyze-terrain.ts  build_assets.sh  check-chunks.ts  detect-grid.ts  generate-autotile-reference.ts  generate-debug-atlas.ts  generate-simple-debug-atlas.ts  index-training-data.ts  package-lock.json  package.json  run-e2e-test.ts  run-sim-tests.sh  run-with-watchdog.sh  telemetry.sh  terrain-sim-tests.ts  tsconfig.json
spec/: CONTRACTS.md
spec/schemas/: building_definition.ron  cell_format.ron  chunk_header.ron  crafting_recipe.ron  event_bus.ron  mod_manifest.ron  module_graph.ron
