[workspace]
resolver = "2"
members = [
    "crates/genesis-engine",
    "crates/genesis-kernel",
    "crates/genesis-gameplay",
    "crates/genesis-world",
    "crates/genesis-common",
    "crates/genesis-tools",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tonygermaneri/genesis"
authors = ["Project Genesis Contributors"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Graphics
wgpu = "23"
winit = "0.30"
raw-window-handle = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
ron = "0.8"
toml = "0.8"

# Logging and diagnostics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Math
glam = { version = "0.25", features = ["serde"] }

# Utilities
bytemuck = { version = "1.14", features = ["derive"] }
parking_lot = "0.12"
dashmap = "5.5"
crossbeam-channel = "0.5"

# Hashing
ahash = "0.8"
rustc-hash = "1.1"

# Random
fastrand = "2.0"
noise = "0.9"

# Compression
lz4_flex = "0.11"
zstd = "0.13"

# File system
notify = "6.1"

# Image loading
image = "0.24"

# UI (external library - per UI RULE)
egui = "0.30"
egui-wgpu = "0.30"
egui-winit = "0.30"

# Testing
criterion = "0.5"
proptest = "1.4"
tempfile = "3.10"

# Async utilities
pollster = "0.3"

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"
rust_2018_idioms = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow common patterns for day-1 scaffold
module_name_repetitions = "allow"
similar_names = "allow"
too_many_lines = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
doc_markdown = "allow"
struct_excessive_bools = "allow"
fn_params_excessive_bools = "allow"
items_after_statements = "allow"
manual_let_else = "allow"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
