[package]
name = "genesis-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Common types and utilities for Project Genesis"

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ahash = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
