[package]
name = "genesis-gameplay"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Gameplay systems: entities, inventory, crafting, economy"

[dependencies]
genesis-common = { path = "../genesis-common" }

serde = { workspace = true }
serde_json = { workspace = true }
ron = { workspace = true }
bincode = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
ahash = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
crossbeam-channel = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
