[package]
name = "genesis-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Development tools: replay, inspectors, perf HUD"

[dependencies]
genesis-common = { path = "../genesis-common" }
genesis-gameplay = { path = "../genesis-gameplay" }
genesis-kernel = { path = "../genesis-kernel" }
genesis-world = { path = "../genesis-world" }

serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
bytemuck = { workspace = true }
thiserror = { workspace = true }

# UI for debug tools
egui = { workspace = true }

[dev-dependencies]
tempfile = "3.10"

[lints]
workspace = true
