[package]
name = "genesis-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Development tools: replay, inspectors, perf HUD"

[dependencies]
genesis-common = { path = "../genesis-common" }
genesis-gameplay = { path = "../genesis-gameplay" }
genesis-kernel = { path = "../genesis-kernel" }
genesis-worldgen = { path = "../genesis-worldgen" }
cubiomes-sys = { path = "../cubiomes-sys" }

serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
bytemuck = { workspace = true }
thiserror = { workspace = true }

# UI for debug tools
egui = { workspace = true }
egui-wgpu = { workspace = true }
egui-winit = { workspace = true }

# GPU/windowing for egui integration
wgpu = { workspace = true }
winit = { workspace = true }

# Audio playback
rodio = "0.19"
toml.workspace = true
image = { workspace = true, features = ["png"] }
chrono = "0.4.43"
uuid = { version = "1.20.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.10"

[lints]
workspace = true
